SET(MDBHEXDUMP_SRCS
  mdb-dump.c
  mdbsupport.c
 )

INCLUDE_DIRECTORIES(
  ../../include
)

IF(FAKE_GLIB)
  SET(MDBHEXDUMP_SRCS
    ${MDBHEXDUMP_SRCS}
    ../libmdb/fakeglib.c
    )
ELSE(FAKE_GLIB)
  INCLUDE_DIRECTORIES(SYSTEM ${GLIB_INCLUDE_DIRS})
ENDIF(FAKE_GLIB)

ADD_EXECUTABLE (mdb-hexdump ${MDBHEXDUMP_SRCS})

TARGET_LINK_LIBRARIES(mdb-hexdump libmdb)

IF(NOT FAKE_GLIB)
  TARGET_LINK_LIBRARIES(mdb-hexdump ${GLIB_LDFLAGS})
ENDIF(NOT FAKE_GLIB)

