SET(LIBMDBODBC_SRCS
  odbc.c
  connectparams.c
 )
 
IF(FAKE_GLIB)
  SET(LIBMDBODBC_SRCS
    ${LIBMDBODBC_SRCS}
    ../libmdb/fakeglib.c
    )
ELSE(FAKE_GLIB)
  INCLUDE_DIRECTORIES(SYSTEM ${GLIB_INCLUDE_DIRS})
ENDIF(FAKE_GLIB)

INCLUDE_DIRECTORIES(
  ../../include
)

ADD_LIBRARY(libmdbodbc ${LIBRARY_TYPE} ${LIBMDBODBC_SRCS})

TARGET_LINK_LIBRARIES(libmdbodbc libmdb)

IF(NOT FAKE_GLIB)
  TARGET_LINK_LIBRARIES(libmdbodbc ${GLIB_LDFLAGS})
ENDIF(NOT FAKE_GLIB)

SET_TARGET_PROPERTIES(libmdbodbc PROPERTIES
  VERSION ${COMPLETE_VERSION}
  SOVERSION ${COMPLETE_VERSION}
)

# install

INSTALL(TARGETS libmdbodbc
  RUNTIME DESTINATION ${MDBTOOLS_BIN_DIR}
  LIBRARY DESTINATION ${MDBTOOLS_LIB_SUBDIR}
  ARCHIVE DESTINATION ${MDBTOOLS_LIB_SUBDIR}
  PUBLIC_HEADER DESTINATION ${MDBTOOLS_INCLUDE_DIR})
